--- a/repair.html
+++ b/repair.html
@@ -60,7 +60,7 @@
         <div class="btn-group btn-group-vertical panel panel-default margin-base-vertical">
             <div class="btn-toolbar">
                 <div class="btn-group btn-group-lg">
-                    <button type="submit" class="btn btn-xlarge btn-primary repair" onclick="location.href='maintenance-request.html'">
+                    <button type="submit" class="btn btn-xlarge btn-primary repair" onclick="location.href='repair-maintenance-request.html'">
                     <span class="glyphicon glyphicon-user"> Maintenance-Request</button>
                 </div>
             </div>
@@ -82,7 +82,7 @@
         <div class="btn-group btn-group-vertical panel panel-default margin-base-vertical">
             <div class="btn-toolbar">
                 <div class="btn-group btn-group-lg">
-                    <button type="submit" class="btn btn-xlarge btn-primary repair" onclick="location.href='ask-for-help.html'">
+                    <button type="submit" class="btn btn-xlarge btn-primary repair" onclick="location.href='repair-ask-for-help.html'">
                     <span class="glyphicon glyphicon-refresh"> Ask-for-help</button>
                 </div>
             </div>
@@ -94,7 +94,7 @@
         <div class="btn-group btn-group-vertical panel panel-default margin-base-vertical">
             <div class="btn-toolbar">
                 <div class="btn-group btn-group-lg">
-                    <button type="submit" class="btn btn-xlarge btn-primary repair" onclick="location.href='join-to-help.html'">
+                    <button type="submit" class="btn btn-xlarge btn-primary repair" onclick="location.href='repair-join-to-help.html'">
                     <span class="glyphicon glyphicon-retweet"> Join-to-help</button><br><br><br>
                 </div>
             </div>
