Fix the checkboxes

--- a/repair-join-to-help.html
+++ b/repair-join-to-help.html
@@ -60,12 +60,12 @@
         <div class="form-group">
             <label>*The problem types you may be able to help (Select all that applied):</label>
             <br>
-            <input type="checkbox" id="checkbox1">Electicity &nbsp;
-            <input type="checkbox" id="checkbox2">Heating &nbsp;
-            <input type="checkbox" id="checkbox3">Toilets&nbsp;
-            <input type="checkbox" id="checkbox4">Computers&nbsp;
+            <input type="checkbox" id="checkbox1">Electicity
+            <input type="checkbox" id="checkbox2">Heating
+            <input type="checkbox" id="checkbox3">Toilets
+            <input type="checkbox" id="checkbox4">Computers
             <input type="checkbox" id="checkbox5">Networks&nbsp;
-            <input type="checkbox" id="checkbox6">Others:&nbsp; <textarea rows="1"></textarea>
+            <input type="checkbox" id="checkbox6">Others:<textarea rows="1"></textarea>
         </div>
 
         <div class="form-group">
@@ -94,6 +94,8 @@
     <div class="center">
         <button class="btn btn-default" onclick="location.href='repair-submit.html'">Submit</button>
         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;  
+        <button class="btn btn-default" onclick="location.href='repair-join-to-help.html'">Clear All</button>
+        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
         <button class="btn btn-default" onclick="location.href='repair.html'">Back</button>
     </div>
 
