--- a/repair-ask-for-help.html
+++ b/repair-ask-for-help.html
@@ -59,19 +59,13 @@
     <form role="form">
         <div class="form-group">
             <label>*Problem Type:</label>
-            <div class="btn-group">
-                <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown">
-                (Please Select:) <span class="caret"></span>
-                </button>
-                <ul class="dropdown-menu" role="menu">
-                <li><a href="#">Electicity</a></li>
-                <li><a href="#">Heating</a></li>
-                <li><a href="#">Toilets</a></li>
-                <li><a href="#">Computers</a></li>
-                <li><a href="#">Networks</a></li>
-                <li><a href="#">Others</a></li>
-                </ul>
-            </div>
+            <br>
+            <input type="radio" id="radio1">Electicity
+            <input type="radio" id="radio2">Heating
+            <input type="radio" id="radio3">Toilets
+            <input type="radio" id="radio4">Computers
+            <input type="radio" id="radio5">Networks&nbsp;
+            <input type="radio" id="radio6">Others: <textarea rows="1"></textarea>
         </div>
         <div class="form-group">
             <label>*Problem Description:</label>
@@ -108,6 +102,8 @@
     <div class="center">
         <button class="btn btn-default" onclick="location.href='repair-submit.html'">Submit</button>
         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;  
+        <button class="btn btn-default" onclick="location.href='repair-ask-for-help.html'">Clear All</button>
+        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
         <button class="btn btn-default" onclick="location.href='repair.html'">Back</button>
     </div><br><br><br>
 
