--- a/meal-edit.html
+++ b/meal-edit.html
@@ -21,6 +21,8 @@
     <link href="css/bootstrap-social.css" rel="stylesheet">
     <link href="css/font-awesome.min.css" rel="stylesheet">
     <link href="css/template.css" rel="stylesheet">
+    <link href="css/meals.css" rel="stylesheet">
+
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
