--- a/meals.html
+++ b/meals.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-    <title>Schedule Your Life - Meal Ordering</title>
+    <title>Schedule Your Life - Meals</title>
 
     <script>
     WebFontConfig = {
@@ -40,6 +40,8 @@
     <link href="css/interface.css" rel="stylesheet">
     <link href="css/bootstrap-social.css" rel="stylesheet">
     <link href="css/font-awesome.min.css" rel="stylesheet">
+    <link href="css/repair.css" rel="stylesheet">
+    <link href="css/template.css" rel="stylesheet">
     <link href="css/meals.css" rel="stylesheet">
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
@@ -51,106 +53,108 @@
 </head>
 
 <body>
-    <div class="span4 text-left">Meal Ordering</div>
-    <div class="span4 text-left"></div>
-    <div class="span4 text-center">
-        <div class="btn-group btn-group-vertical panel panel-default">
-            <div class="btn-toolbar">
-                <div class="btn-group btn-group-lg">
-                    <button type="submit" class="btn btn-large btn-primary" onclick="location.href='meal-create.html'">
-                        Customize a new order
-                    </button>
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="span4 text-left">Select a popular meal other people like</div>
-    <div class="span4 text-center">
-        <div class="btn-group btn-group-vertical panel panel-default">
-            <div class="btn-toolbar">
-                <div class="btn-group btn-group-lg">
-                    <button type="submit" class="btn btn-large btn-primary" onclick="location.href='interface.html'">
-                        Noodle
-                    </button>
-                    <button type="submit" class="btn btn-large btn-primary" onclick="location.href='interface.html'">
-                        Pizza
-                    </button>
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="span4 text-left">Select from my favorite</div>
-    <div class="span4 text-center">
-        <div class="btn-group btn-group-vertical panel panel-default">
-            <div class="btn-toolbar">
-                <div class="btn-group btn-group-lg">
-                    <button type="submit" class="btn btn-large btn-primary" onclick="location.href='interface.html'">
-                        ChickenSack
-                    </button>
-                    <button type="submit" class="btn btn-large btn-primary" onclick="location.href='interface.html'">
-                        Subway
-                    </button>
-                </div>
-            </div>
-        </div>
-    </div>
-
-
-    <div lass="span4 text-left">My order history</div>
-
-    <div class="panel panel-primary collapse-group">
-        <div class="panel-heading">Burger King - Mar.02, 2014
-        </div>
-        <a class="btn" data-toggle="collapse" data-target="#viewdetails1">View details &raquo;</a>
-        <div class="panel-body collapse" id="viewdetails1">
-            <ul>
-                <strong>
-                    <li>
-                        <span class="glyphicon glyphicon-shopping-cart"></span>&nbsp;Sausage & Cheese Muffin Sandwich Meal
-                    </li>
-                    <li>
-                        <span class="glyphicon glyphicon-time"></span>&nbsp;Mar.02, 2014 - 12:30 PM
-                    </li>
-                    <li>
-                        <span class="glyphicon glyphicon-map-marker"></span>&nbsp;Engelhalt Room 325
-                    </li>
-                    <li>
-                        <span class="glyphicon glyphicon-transfer"></span>&nbsp; Prepare to deliver
-                        <button type="submit" class="btn btn-small btn-primary" onclick="location.href='meal-edit.html'" style="float: right;">
-                            Edit
+    <div class="meal-font">
+        <div class="span4 text-left">Meal Ordering</div>
+        <div class="span4 text-left"></div>
+        <div class="span4 text-center">
+            <div class="btn-group btn-group-vertical panel panel-default">
+                <div class="btn-toolbar">
+                    <div class="btn-group btn-group-lg">
+                        <button type="submit" class="btn btn-large btn-primary" onclick="location.href='meal-create.html'">
+                            Customize a new order
                         </button>
-                    </li>
-                </strong>
-            </ul>
+                    </div>
+                </div>
+            </div>
         </div>
-    </div>
-    <div class="panel panel-primary">
-        <div class="panel-heading">Koi - Mar.02, 2014</div>
-        <a class="btn" data-toggle="collapse" data-target="#viewdetails2">View details &raquo;</a>
-        <div class="panel-body collapse" id="viewdetails2">
-            <ul>
-                <strong>
-                    <li>
-                        <span class="glyphicon glyphicon-shopping-cart"></span>&nbsp;Hot Pepper Chicken</li>
-                    <li>
-                        <span class="glyphicon glyphicon-time"></span>&nbsp;Feb.22, 2014 - 6:30 PM
-                    </li>
-                    <li>
-                        <span class="glyphicon glyphicon-map-marker"></span>&nbsp;Engelhalt Room 226
-                    </li>
-                    <li>
-                        <span class="glyphicon glyphicon-transfer"></span>&nbsp; Delivered
-                    </li>
-                </strong>
-            </ul>
+        <div class="span4 text-left">Select a popular meal other people like</div>
+        <div class="span4 text-center">
+            <div class="btn-group btn-group-vertical panel panel-default">
+                <div class="btn-toolbar">
+                    <div class="btn-group btn-group-lg">
+                        <button type="submit" class="btn btn-large btn-primary" onclick="location.href='interface.html'">
+                            Noodle
+                        </button>
+                        <button type="submit" class="btn btn-large btn-primary" onclick="location.href='interface.html'">
+                            Pizza
+                        </button>
+                    </div>
+                </div>
+            </div>
         </div>
-    </div>
+        <div class="span4 text-left">Select from my favorite</div>
+        <div class="span4 text-center">
+            <div class="btn-group btn-group-vertical panel panel-default">
+                <div class="btn-toolbar">
+                    <div class="btn-group btn-group-lg">
+                        <button type="submit" class="btn btn-large btn-primary" onclick="location.href='interface.html'">
+                            ChickenSack
+                        </button>
+                        <button type="submit" class="btn btn-large btn-primary" onclick="location.href='interface.html'">
+                            Subway
+                        </button>
+                    </div>
+                </div>
+            </div>
+        </div>
 
+
+        <div class="span4 text-left">My order history</div>
+
+        <div class="panel panel-primary collapse-group">
+            <div class="panel-heading">Burger King - Mar.02, 2014
+            </div>
+            <a class="btn" data-toggle="collapse" data-target="#viewdetails1">View details &raquo;</a>
+            <div class="panel-body collapse" id="viewdetails1">
+                <ul>
+                    <strong>
+                        <li>
+                            <span class="glyphicon glyphicon-shopping-cart"></span>&nbsp;Sausage & Cheese Muffin Sandwich Meal
+                        </li>
+                        <li>
+                            <span class="glyphicon glyphicon-time"></span>&nbsp;Mar.02, 2014 - 12:30 PM
+                        </li>
+                        <li>
+                            <span class="glyphicon glyphicon-map-marker"></span>&nbsp;Engelhalt Room 325
+                        </li>
+                        <li>
+                            <span class="glyphicon glyphicon-transfer"></span>&nbsp; Prepare to deliver
+                            <button type="submit" class="btn btn-small btn-primary" onclick="location.href='meal-edit.html'" style="float: right;">
+                                Edit
+                            </button>
+                        </li>
+                    </strong>
+                </ul>
+            </div>
+        </div>
+
+        <div class="panel panel-primary">
+            <div class="panel-heading">Koi - Mar.02, 2014</div>
+            <a class="btn" data-toggle="collapse" data-target="#viewdetails2">View details &raquo;</a>
+            <div class="panel-body collapse" id="viewdetails2">
+                <ul>
+                    <strong>
+                        <li>
+                            <span class="glyphicon glyphicon-shopping-cart"></span>&nbsp;Hot Pepper Chicken</li>
+                        <li>
+                            <span class="glyphicon glyphicon-time"></span>&nbsp;Feb.22, 2014 - 6:30 PM
+                        </li>
+                        <li>
+                            <span class="glyphicon glyphicon-map-marker"></span>&nbsp;Engelhalt Room 226
+                        </li>
+                        <li>
+                            <span class="glyphicon glyphicon-transfer"></span>&nbsp; Delivered
+                        </li>
+                    </strong>
+                </ul>
+            </div>
+        </div>
+    </div>
     <!-- This is a templete, do any thing between this line and the next comment line -->
 
 
     <!-- DO NOT MODIFY THOSE FOLLOWING -->
-    <div id="include_navBar "></div>
+    <div id="include_navBar"></div>
 </body>
 
 </html>
