--- a/meal-create.html
+++ b/meal-create.html
@@ -34,61 +34,69 @@
 
 <body>
     <!-- This is a templete, do any thing between this line and the next comment line -->
-    <div class="span4 text-center">
-        <div class="btn-group btn-group-vertical panel panel-default margin-base-vertical">
-            <div class="btn-toolbar">
-                <div class="btn-group btn-group-lg">
-                    <button type="submit" class="btn btn-xlarge btn-primary sign" class="btn btn-xlarge btn-primary sign">Create New!</button>
+    <div class="meal-font">
+        <div class="span4 text-center">
+            <div class="btn-group btn-group-vertical panel panel-default margin-base-vertical">
+                <div class="btn-toolbar">
+                    <div class="btn-group btn-group-lg">
+                        <button type="submit" class="btn btn-xlarge btn-primary sign" class="btn btn-xlarge btn-primary sign">Create New!</button>
+                    </div>
                 </div>
             </div>
         </div>
+        <form role="form">
+            <div class="form-group">
+                <label>Resaurant</label>
+                <input type="name" class="form-control" id="Name" placeholder="Enter Name(Nickname)">
+
+                <select name="mydropdown">
+                    <option value="Milk">Fresh Milk</option>
+                    <option value="Cheese">Old Cheese</option>
+                    <option value="Bread">Hot Bread</option>
+                </select>
+            </div>
+            <div class="form-group">
+                <label>*Activity Title</label>
+                <input type="title" class="form-control" id="Title" placeholder="Enter Title">
+            </div>
+            <div class="form-group">
+                <label>*Email address</label>
+                <input type="email" class="form-control" id="Email" placeholder="Enter Email">
+            </div>
+            <div class="form-group">
+                <label>*Telephone:</label>
+                <input type="telephone" class="form-control" id="Tel" placeholder="Enter Tel#">
+            </div>
+            <div class="form-group">
+                <label>*Location</label>
+                <input type="location" class="form-control" id="Location" placeholder="Enter Location">
+            </div>
+            <div class="form-group">
+                <label>Tag</label>
+                <input type="tag" class="form-control" id="Tag" placeholder="Enter Tag">
+            </div>
+            <div class="form-group">
+                <label>*Capacity</label>
+                <input type="capacity" id="Capacity">
+            </div>
+            <div class="form-group">
+                <label>Activity Description(300 characters)</label>
+                <textarea class="form-control" rows="3"></textarea>
+            </div>
+            <div class="form-group">
+                <label>Picture Upload</label>
+                <input type="file" id="Picture">
+                <br>
+                <p class="help-block">* is required.</p>
+            </div>
+            <div class="checkbox">
+                <label>
+                    <input type="checkbox">Check me out
+                </label>
+            </div>
+            <button type="submit" class="btn btn-default">Submit</button>
+        </form>
     </div>
-    <form role="form">
-        <div class="form-group">
-            <label>Host Name</label>
-            <input type="name" class="form-control" id="Name" placeholder="Enter Name(Nickname)">
-        </div>
-        <div class="form-group">
-            <label>*Activity Title</label>
-            <input type="title" class="form-control" id="Title" placeholder="Enter Title">
-        </div>
-        <div class="form-group">
-            <label>*Email address</label>
-            <input type="email" class="form-control" id="Email" placeholder="Enter Email">
-        </div>
-        <div class="form-group">
-            <label>*Telephone:</label>
-            <input type="telephone" class="form-control" id="Tel" placeholder="Enter Tel#">
-        </div>
-        <div class="form-group">
-            <label>*Location</label>
-            <input type="location" class="form-control" id="Location" placeholder="Enter Location">
-        </div>
-        <div class="form-group">
-            <label>Tag</label>
-            <input type="tag" class="form-control" id="Tag" placeholder="Enter Tag">
-        </div>
-        <div class="form-group">
-            <label>*Capacity</label>
-            <input type="capacity" id="Capacity">
-        </div>
-        <div class="form-group">
-            <label>Activity Description(300 characters)</label>
-            <textarea class="form-control" rows="3"></textarea>
-        </div>
-        <div class="form-group">
-            <label>Picture Upload</label>
-            <input type="file" id="Picture">
-            <br>
-            <p class="help-block">* is required.</p>
-        </div>
-        <div class="checkbox">
-            <label>
-                <input type="checkbox">Check me out
-            </label>
-        </div>
-        <button type="submit" class="btn btn-default">Submit</button>
-    </form>
     <!-- DO NOT MODIFY THOSE FOLLOWING -->
     <div id="include_navBar"></div>
 </body>
