--- a/meals.html
+++ b/meals.html
@@ -54,13 +54,12 @@
 
 <body>
     <div class="meal-font">
-        <div class="span4 text-left">Meal Ordering</div>
         <div class="span4 text-left"></div>
         <div class="span4 text-center">
             <div class="btn-group btn-group-vertical panel panel-default">
                 <div class="btn-toolbar">
                     <div class="btn-group btn-group-lg">
-                        <button type="submit" class="btn btn-large btn-primary" onclick="location.href='meal-create.html'">
+                        <button type="submit" class="btn btn-large btn-primary" onclick="location.href='meals-create.html'">
                             Customize a new order
                         </button>
                     </div>
@@ -68,14 +67,15 @@
             </div>
         </div>
         <div class="span4 text-left">Select a popular meal other people like</div>
+        <p></p>
         <div class="span4 text-center">
             <div class="btn-group btn-group-vertical panel panel-default">
                 <div class="btn-toolbar">
-                    <div class="btn-group btn-group-lg">
-                        <button type="submit" class="btn btn-large btn-primary" onclick="location.href='interface.html'">
+                    <div class="btn-group btn-group-regular">
+                        <button type="submit" class="btn btn-large btn-primary" onclick="location.href='meals-edit.html'">
                             Noodle
                         </button>
-                        <button type="submit" class="btn btn-large btn-primary" onclick="location.href='interface.html'">
+                        <button type="submit" class="btn btn-large btn-primary" onclick="location.href='meals-edit.html'">
                             Pizza
                         </button>
                     </div>
@@ -83,14 +83,15 @@
             </div>
         </div>
         <div class="span4 text-left">Select from my favorite</div>
+        <p></p>
         <div class="span4 text-center">
             <div class="btn-group btn-group-vertical panel panel-default">
                 <div class="btn-toolbar">
-                    <div class="btn-group btn-group-lg">
-                        <button type="submit" class="btn btn-large btn-primary" onclick="location.href='interface.html'">
+                    <div class="btn-group btn-group-regular">
+                        <button type="submit" class="btn btn-large btn-primary" onclick="location.href='meals-edit.html'">
                             ChickenSack
                         </button>
-                        <button type="submit" class="btn btn-large btn-primary" onclick="location.href='interface.html'">
+                        <button type="submit" class="btn btn-large btn-primary" onclick="location.href='meals-edit.html'">
                             Subway
                         </button>
                     </div>
@@ -98,9 +99,8 @@
             </div>
         </div>
 
-
-        <div class="span4 text-left">My order history</div>
-
+        <div class="span4 text-left">My Order History</div>
+        <p></p>
         <div class="panel panel-primary collapse-group">
             <div class="panel-heading">Burger King - Mar.02, 2014
             </div>
@@ -119,7 +119,7 @@
                         </li>
                         <li>
                             <span class="glyphicon glyphicon-transfer"></span>&nbsp; Prepare to deliver
-                            <button type="submit" class="btn btn-small btn-primary" onclick="location.href='meal-edit.html'" style="float: right;">
+                            <button type="submit" class="btn btn-small btn-primary" onclick="location.href='meals-edit.html'" style="float: right;">
                                 Edit
                             </button>
                         </li>
