Repair Corner Bugs

--- a/repair.html
+++ b/repair.html
@@ -94,11 +94,12 @@
             <div class="btn-toolbar">
                 <div class="btn-group btn-group-lg">
                     <button type="submit" class="btn btn-xlarge btn-primary repair" onclick="location.href='repair.html'">
-                    <span class="glyphicon glyphicon-search"> Problems&Solutions</button><br><br><br>
+                    <span class="glyphicon glyphicon-search"> Problems&Solutions</button>
                 </div>
             </div>
         </div>
     </div>
+    <br><br><br>
 
 
 
