Mobile version is suitable for chrome and firefox on mac

--- a/repair-join-to-help.html
+++ b/repair-join-to-help.html
@@ -64,7 +64,7 @@
             <input type="checkbox" id="checkbox2">Heating
             <input type="checkbox" id="checkbox3">Toilets
             <input type="checkbox" id="checkbox4">Computers
-            <input type="checkbox" id="checkbox5">Networks&nbsp;
+            <input type="checkbox" id="checkbox5">Networks<br>
             <input type="checkbox" id="checkbox6">Others:<textarea rows="1"></textarea>
         </div>
 
@@ -98,6 +98,7 @@
         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
         <button class="btn btn-default" onclick="location.href='repair.html'">Back</button>
     </div>
+    <br><br><br>
 
     <!-- DO NOT MODIFY THOSE FOLLOWING -->
     <div id="include_navBar"></div>
