--- a/repair-maintenance-request.html
+++ b/repair-maintenance-request.html
@@ -64,7 +64,7 @@
             <input type="radio" id="radio2">Heating
             <input type="radio" id="radio3">Toilets
             <input type="radio" id="radio4">Computers
-            <input type="radio" id="radio5">Networks&nbsp;
+            <input type="radio" id="radio5">Networks<br>
             <input type="radio" id="radio6">Others: <textarea rows="1"></textarea>
         </div>
         <div class="form-group">
@@ -100,6 +100,7 @@
         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
         <button class="btn btn-default" onclick="location.href='repair.html'">Back</button>
     </div>
+    <br><br><br>
 
 
 
