--- a/meals-create.html
+++ b/meals-create.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-    <title>Schedule Your Life</title>
+    <title>Schedule Your Life - Meals - New Order</title>
 
     <!-- jQuery (necessary for Bootstrap's JavaSLipt plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
@@ -39,6 +39,7 @@
         <form role="form">
             <div class="form-group">
                 <label>Resaurant</label>
+                <p></p>
                 <select name="mydropdown">
                     <option value="1">Chicken Shack</option>
                     <option value="2">Koi</option>
@@ -47,6 +48,7 @@
             </div>
             <div class="form-group">
                 <label>Dishes</label>
+                <p></p>
                 <select name="mydropdown">
                     <option value="1">Fresh Milk</option>
                     <option value="2">Old Cheese</option>
@@ -59,7 +61,11 @@
             </div>
             <div class="form-group">
                 <label>Time</label>
-                <input type="tag" class="form-control" id="Tag" placeholder="Enter Tag">
+                <input type="time" class="form-control" id="Tag" placeholder="Enter Time">
+            </div>
+            <div class="form-group">
+                <label>Date</label>
+                <input type="date" class="form-control" id="Tag" placeholder="Enter Date" style="width: 200px;">
             </div>
             <button type="submit" class="btn btn-default">Submit</button>
         </form>
