--- a/meals-edit.html
+++ b/meals-edit.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-    <title>Schedule Your Life</title>
+    <title>Schedule Your Life - Meals - Edit Order</title>
 
     <!-- jQuery (necessary for Bootstrap's JavaSLipt plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
