--- a/activity-launch.html
+++ b/activity-launch.html
@@ -34,7 +34,7 @@
 <body>
     <!-- This is a templete, do any thing between this line and the next comment line -->
     <div class="span4 text-center">
-       5 <div class="btn-group btn-group-vertical panel panel-default margin-base-vertical">
+        <div class="btn-group btn-group-vertical panel panel-default margin-base-vertical">
             <div class="btn-toolbar">
                 <div class="btn-group btn-group-lg">
                     <button type="submit" class="btn btn-xlarge btn-primary sign" class="btn btn-xlarge btn-primary sign">Launch New!</button>
@@ -73,7 +73,7 @@
             <label>*Capacity</label>
             <input type="capacity" id="Capacity">
         </div>
-         <div class="form-group">
+        <div class="form-group">
             <label>Activity Description(300 characters)</label>
             <textarea class="form-control" rows="3"></textarea>
         </div>
@@ -83,7 +83,7 @@
         </div>
         <div class="left">
             <button class="btn btn-primary btn-lg" type="button" onclick="location.href='activity confirm.html'">SUBMIT</button>
-            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;  
+            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
             <button class="btn btn-primary btn-lg" type="button" onclick="location.href='activity.html'">BACK</button>
         </div>
     </form>
