--- a/meals-create.html
+++ b/meals-create.html
@@ -40,47 +40,80 @@
             <div class="form-group">
                 <label>Resaurant</label>
                 <p></p>
-                <select name="mydropdown">
-                    <option value="1">Chicken Shack</option>
-                    <option value="2">Koi</option>
-                    <option value="3">Burger King</option>
-                </select>
+                <div id="rest_div">
+                    <select name="mydropdown">
+                        <option value="1">Chicken Shack</option>
+                        <option value="2">Koi</option>
+                        <option value="3">Burger King</option>
+                    </select>
+                </div>
             </div>
             <div class="form-group">
                 <label>Dishes</label>
                 <p></p>
-                <select name="mydropdown1">
-                    <option value="1">CATFISH BONE IN -- 11.50</option>
-                    <option value="3">CATFISH NUGGETS BONELESS -- 8.97</option>
-                    <option value="3">PERCH -- 8.97</option>
-                    <option value="2">TILAPIA FILLETS -- 11.50</option>
-                </select>
-                <select name="mydropdown2">
-                    <option value="1">Kung Bao chicken -- 12.99</option>
-                    <option value="2">Szechwan Red Snapper Whole Fish -- 25.99</option>
-                    <option value="3">Hot Pepper Chicken -- 12.99</option>
-                </select>
-                <select name="mydropdown3">
-                    <option value="1">Sausage & Cheese Muffin Sandwich Meal</option>
-                    <option value="2">Southwestern Breakfast Burrito Meal</option>
-                    <option value="3">Sausage Biscuit Sandwich Meal</option>
-                </select>
+                <div id="mydropdown1">
+                    <select name="mydropdown1">
+                        <option value="1">CATFISH BONE IN -- 11.50</option>
+                        <option value="3">CATFISH NUGGETS BONELESS -- 8.97</option>
+                        <option value="3">PERCH -- 8.97</option>
+                        <option value="2">TILAPIA FILLETS -- 11.50</option>
+                    </select>
+                </div>
+
+                <div id="mydropdown2" class="sr-only">
+                    <select name="mydropdown2">
+                        <option value="1">Kung Bao chicken -- 12.99</option>
+                        <option value="2">Szechwan Red Snapper Whole Fish -- 25.99</option>
+                        <option value="3">Hot Pepper Chicken -- 12.99</option>
+                    </select>
+                </div>
+
+                <div id="mydropdown3" class="sr-only">
+                    <select name="mydropdown3">
+                        <option value="1">Sausage & Cheese Muffin Sandwich Meal</option>
+                        <option value="2">Southwestern Breakfast Burrito Meal</option>
+                        <option value="3">Sausage Biscuit Sandwich Meal</option>
+                    </select>
+                </div>
             </div>
             <div class="form-group">
                 <label>Location</label>
-                <input type="location" class="form-control" id="Location" placeholder="Enter Location">
+                <input type="location" class="form-control" name="Location" placeholder="Enter Location" style="width: 230px;">
             </div>
             <div class="form-group">
                 <label>Time</label>
-                <input type="time" class="form-control" id="Tag" placeholder="Enter Time">
+                <input type="time" class="form-control" name="mtime" placeholder="Enter Time" style="width: 230px;">
             </div>
             <div class="form-group">
                 <label>Date</label>
-                <input type="date" class="form-control" id="Tag" placeholder="Enter Date" style="width: 200px;">
+                <input type="date" class="form-control" name="mdate" placeholder="Enter Date" style="width: 230px;">
             </div>
             <button type="submit" class="btn btn-default">Submit</button>
         </form>
     </div>
+
+    <script>
+    $("select").change(function() {
+        var selectno = $("#rest_div select").val();
+        console.log(selectno);
+        if (selectno == 1) {
+            $("#mydropdown1").removeClass("sr-only");
+            $("#mydropdown2").addClass("sr-only");
+            $("#mydropdown3").addClass("sr-only");
+        }
+        if (selectno == 2) {
+            $("#mydropdown1").addClass("sr-only");
+            $("#mydropdown2").removeClass("sr-only");
+            $("#mydropdown3").addClass("sr-only");
+        }
+        if (selectno == 3) {
+            $("#mydropdown1").addClass("sr-only");
+            $("#mydropdown2").addClass("sr-only");
+            $("#mydropdown3").removeClass("sr-only");
+        }
+    })
+    </script>
+
     <!-- DO NOT MODIFY THOSE FOLLOWING -->
     <div id="include_navBar"></div>
 </body>
