--- a/meals-edit.html
+++ b/meals-edit.html
@@ -34,61 +34,86 @@
 
 <body>
     <!-- This is a templete, do any thing between this line and the next comment line -->
-    <div class="span4 text-center">
-        <div class="btn-group btn-group-vertical panel panel-default margin-base-vertical">
-            <div class="btn-toolbar">
-                <div class="btn-group btn-group-lg">
-                    <button type="submit" class="btn btn-xlarge btn-primary sign" class="btn btn-xlarge btn-primary sign">Create New!</button>
+    <div class="meal-font">
+        <form role="form">
+            <div class="form-group">
+                <label>Resaurant</label>
+                <p></p>
+                <div id="rest_div">
+                    <select name="mydropdown">
+                        <option value="1">Chicken Shack</option>
+                        <option value="2">Koi</option>
+                        <option value="3">Burger King</option>
+                    </select>
                 </div>
             </div>
-        </div>
+            <div class="form-group">
+                <label>Dishes</label>
+                <p></p>
+                <div id="mydropdown1">
+                    <select name="mydropdown1">
+                        <option value="1">CATFISH BONE IN -- 11.50</option>
+                        <option value="3">CATFISH NUGGETS BONELESS -- 8.97</option>
+                        <option value="3">PERCH -- 8.97</option>
+                        <option value="2">TILAPIA FILLETS -- 11.50</option>
+                    </select>
+                </div>
+
+                <div id="mydropdown2" class="sr-only">
+                    <select name="mydropdown2">
+                        <option value="1">Kung Bao chicken -- 12.99</option>
+                        <option value="2">Szechwan Red Snapper Whole Fish -- 25.99</option>
+                        <option value="3">Hot Pepper Chicken -- 12.99</option>
+                    </select>
+                </div>
+
+                <div id="mydropdown3" class="sr-only">
+                    <select name="mydropdown3">
+                        <option value="1">Sausage & Cheese Muffin Sandwich Meal</option>
+                        <option value="2">Southwestern Breakfast Burrito Meal</option>
+                        <option value="3">Sausage Biscuit Sandwich Meal</option>
+                    </select>
+                </div>
+            </div>
+            <div class="form-group">
+                <label>Location</label>
+                <input type="location" class="form-control" name="Location" placeholder="Enter Location" style="width: 230px;">
+            </div>
+            <div class="form-group">
+                <label>Time</label>
+                <input type="time" class="form-control" name="mtime" placeholder="Enter Time" style="width: 230px;">
+            </div>
+            <div class="form-group">
+                <label>Date</label>
+                <input type="date" class="form-control" name="mdate" placeholder="Enter Date" style="width: 230px;">
+            </div>
+            <button type="submit" class="btn btn-default">Re-submit</button>&nbsp;&nbsp;&nbsp;&nbsp;
+            <button class="btn btn-default">Delete Order</button>
+        </form>
     </div>
-    <form role="form">
-        <div class="form-group">
-            <label>Host Name</label>
-            <input type="name" class="form-control" id="Name" placeholder="Enter Name(Nickname)">
-        </div>
-        <div class="form-group">
-            <label>*Activity Title</label>
-            <input type="title" class="form-control" id="Title" placeholder="Enter Title">
-        </div>
-        <div class="form-group">
-            <label>*Email address</label>
-            <input type="email" class="form-control" id="Email" placeholder="Enter Email">
-        </div>
-        <div class="form-group">
-            <label>*Telephone:</label>
-            <input type="telephone" class="form-control" id="Tel" placeholder="Enter Tel#">
-        </div>
-        <div class="form-group">
-            <label>*Location</label>
-            <input type="location" class="form-control" id="Location" placeholder="Enter Location">
-        </div>
-        <div class="form-group">
-            <label>Tag</label>
-            <input type="tag" class="form-control" id="Tag" placeholder="Enter Tag">
-        </div>
-        <div class="form-group">
-            <label>*Capacity</label>
-            <input type="capacity" id="Capacity">
-        </div>
-        <div class="form-group">
-            <label>Activity Description(300 characters)</label>
-            <textarea class="form-control" rows="3"></textarea>
-        </div>
-        <div class="form-group">
-            <label>Picture Upload</label>
-            <input type="file" id="Picture">
-            <br>
-            <p class="help-block">* is required.</p>
-        </div>
-        <div class="checkbox">
-            <label>
-                <input type="checkbox">Check me out
-            </label>
-        </div>
-        <button type="submit" class="btn btn-default">Submit</button>
-    </form>
+
+    <script>
+    $("select").change(function() {
+        var selectno = $("#rest_div select").val();
+        console.log(selectno);
+        if (selectno == 1) {
+            $("#mydropdown1").removeClass("sr-only");
+            $("#mydropdown2").addClass("sr-only");
+            $("#mydropdown3").addClass("sr-only");
+        }
+        if (selectno == 2) {
+            $("#mydropdown1").addClass("sr-only");
+            $("#mydropdown2").removeClass("sr-only");
+            $("#mydropdown3").addClass("sr-only");
+        }
+        if (selectno == 3) {
+            $("#mydropdown1").addClass("sr-only");
+            $("#mydropdown2").addClass("sr-only");
+            $("#mydropdown3").removeClass("sr-only");
+        }
+    })
+    </script>
+
     <!-- DO NOT MODIFY THOSE FOLLOWING -->
     <div id="include_navBar"></div>
 </body>
