--- a/meals-create.html
+++ b/meals-create.html
@@ -35,61 +35,63 @@
 <body>
     <!-- This is a templete, do any thing between this line and the next comment line -->
 
-    <div class="meal-font">
-        <form role="form">
-            <div class="form-group">
-                <label>Resaurant</label>
-                <p></p>
-                <div id="rest_div">
-                    <select name="mydropdown">
-                        <option value="1">Chicken Shack</option>
-                        <option value="2">Koi</option>
-                        <option value="3">Burger King</option>
-                    </select>
+    <div class="container-fluid">
+        <div class="row-fluid meal-font">
+            <form role="form">
+                <div class="form-group">
+                    <label>Resaurant</label>
+                    <p></p>
+                    <div id="rest_div">
+                        <select name="mydropdown">
+                            <option value="1">Chicken Shack</option>
+                            <option value="2">Koi</option>
+                            <option value="3">Burger King</option>
+                        </select>
+                    </div>
                 </div>
-            </div>
-            <div class="form-group">
-                <label>Dishes</label>
-                <p></p>
-                <div id="mydropdown1">
-                    <select name="mydropdown1">
-                        <option value="1">CATFISH BONE IN -- 11.50</option>
-                        <option value="3">CATFISH NUGGETS BONELESS -- 8.97</option>
-                        <option value="3">PERCH -- 8.97</option>
-                        <option value="2">TILAPIA FILLETS -- 11.50</option>
-                    </select>
-                </div>
+                <div class="form-group">
+                    <label>Dishes</label>
+                    <p></p>
+                    <div id="mydropdown1">
+                        <select name="mydropdown1">
+                            <option value="1">CATFISH BONE IN -- 11.50</option>
+                            <option value="3">CATFISH NUGGETS BONELESS -- 8.97</option>
+                            <option value="3">PERCH -- 8.97</option>
+                            <option value="2">TILAPIA FILLETS -- 11.50</option>
+                        </select>
+                    </div>
 
-                <div id="mydropdown2" class="sr-only">
-                    <select name="mydropdown2">
-                        <option value="1">Kung Bao chicken -- 12.99</option>
-                        <option value="2">Szechwan Red Snapper Whole Fish -- 25.99</option>
-                        <option value="3">Hot Pepper Chicken -- 12.99</option>
-                    </select>
-                </div>
+                    <div id="mydropdown2" class="sr-only">
+                        <select name="mydropdown2">
+                            <option value="1">Kung Bao chicken -- 12.99</option>
+                            <option value="2">Szechwan Red Snapper Whole Fish -- 25.99</option>
+                            <option value="3">Hot Pepper Chicken -- 12.99</option>
+                        </select>
+                    </div>
 
-                <div id="mydropdown3" class="sr-only">
-                    <select name="mydropdown3">
-                        <option value="1">Sausage & Cheese Muffin Sandwich Meal</option>
-                        <option value="2">Southwestern Breakfast Burrito Meal</option>
-                        <option value="3">Sausage Biscuit Sandwich Meal</option>
-                    </select>
+                    <div id="mydropdown3" class="sr-only">
+                        <select name="mydropdown3">
+                            <option value="1">Sausage & Cheese Muffin Sandwich Meal</option>
+                            <option value="2">Southwestern Breakfast Burrito Meal</option>
+                            <option value="3">Sausage Biscuit Sandwich Meal</option>
+                        </select>
+                    </div>
                 </div>
-            </div>
-            <div class="form-group">
-                <label>Location</label>
-                <input type="location" class="form-control" name="Location" placeholder="Enter Location" style="width: 230px;">
-            </div>
-            <div class="form-group">
-                <label>Time</label>
-                <input type="time" class="form-control" name="mtime" placeholder="Enter Time" style="width: 230px;">
-            </div>
-            <div class="form-group">
-                <label>Date</label>
-                <input type="date" class="form-control" name="mdate" placeholder="Enter Date" style="width: 230px;">
-            </div>
-            <button type="submit" class="btn btn-default">Submit</button>
-        </form>
+                <div class="form-group">
+                    <label>Location</label>
+                    <input type="location" class="form-control" name="Location" placeholder="Enter Location" style="width: 230px;">
+                </div>
+                <div class="form-group">
+                    <label>Time</label>
+                    <input type="time" class="form-control" name="mtime" placeholder="Enter Time" style="width: 230px;">
+                </div>
+                <div class="form-group">
+                    <label>Date</label>
+                    <input type="date" class="form-control" name="mdate" placeholder="Enter Date" style="width: 230px;">
+                </div>
+                <button type="submit" class="btn btn-default">Submit</button>
+            </form>
+        </div>
     </div>
 
     <script>
