--- a/activity.html
+++ b/activity.html
@@ -53,14 +53,14 @@
         <div class="btn-group btn-group-vertical panel panel-default margin-base-vertical">
             <div class="btn-toolbar">
                 <div class="btn-group btn-group-lg">
-                    <button type="submit" class="btn btn-xlarge btn-primary sign" class="btn btn-xlarge btn-primary sign" onclick="location.href='interface.html'">Post New!</button>
+                    <button type="submit" class="btn btn-xlarge btn-primary sign" class="btn btn-xlarge btn-primary sign" onclick="location.href='activity-launch.html'">Post New!</button>
                 </div>
             </div>
         </div>
     </div>
     <div class="panel panel-primary">
-        <div class="panel-heading">NBA GALA!</div>
-        <div class="panel-body">
+        <div class="panel-heading" onclick="location.href='activity details.html'">NBA GALA!</div>
+        <div class="panel-body"  onclick="location.href='activity details.html'">
             <ul>
                 <strong>
                 <li><span class=" glyphicon glyphicon-time"></span>02-02 20:00-22:00</li>
