--- a/activity details.html
+++ b/activity details.html
@@ -35,7 +35,7 @@
     <h1 class="text-center">ACTIVITY DETAILS<small>(Undergoing)</small></h1>
     <br>
     <div class="row">
-        <div class="col-xs-6 col-sm-4"></div>
+        <<div class="col-xs-6 col-sm-4"></div>
         <div class="col-xs-6 col-sm-4">
             <dl class="dl-horizontal">
                 <dt>TITLE<span class=" glyphicon glyphicon-star"></span></dt>
@@ -59,8 +59,13 @@
                 <dt>PICTURE<span class=" glyphicon glyphicon-picture"></span></dt>
                 <dd><img src="..." class="img-responsive" alt="Responsive image"></dd>
             </dl>
-            <p><a class="btn btn-primary btn-lg" role="button">I AM INTERESTED<span class=" glyphicon glyphicon-heart"></a></p>
-            <p><a class="btn btn-primary btn-lg" role="button">I WILL ATTEND<span class=" glyphicon glyphicon-thumbs-up"></a></p>       
+            <div class="center">
+                <button class="btn btn-primary btn-lg" role="button">I AM INTERESTED<span class=" glyphicon glyphicon-heart"></span></button>
+                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;  
+                <button class="btn btn-primary btn-lg" role="button">I WILL ATTEND<span class=" glyphicon glyphicon-thumbs-up"></span></button>
+                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
+                <button class="btn btn-primary btn-lg" role="button" onclick="location.href='activity.html'">Back</button>
+            </div>
         </div>
         <div class="clearfix visible-xs"></div>
         <div class="col-xs-6 col-sm-4"></div>
