--- a/activity-launch.html
+++ b/activity-launch.html
@@ -30,10 +30,11 @@
       <![endif]-->
 </head>
 
+
 <body>
     <!-- This is a templete, do any thing between this line and the next comment line -->
     <div class="span4 text-center">
-        <div class="btn-group btn-group-vertical panel panel-default margin-base-vertical">
+       5 <div class="btn-group btn-group-vertical panel panel-default margin-base-vertical">
             <div class="btn-toolbar">
                 <div class="btn-group btn-group-lg">
                     <button type="submit" class="btn btn-xlarge btn-primary sign" class="btn btn-xlarge btn-primary sign">Launch New!</button>
@@ -42,6 +43,8 @@
         </div>
     </div>
     <form role="form">
+        <p class="help-block">* is required.</p>
+        <br>
         <div class="form-group">
             <label>Host Name</label>
             <input type="name" class="form-control" id="Name" placeholder="Enter Name(Nickname)">
@@ -77,15 +80,12 @@
         <div class="form-group">
             <label>Picture Upload</label>
             <input type="file" id="Picture">
-            <br>
-            <p class="help-block">* is required.</p>
         </div>
-        <div class="checkbox">
-            <label>
-                <input type="checkbox"> Check me out
-            </label>
+        <div class="left">
+            <button class="btn btn-primary btn-lg" type="button" onclick="location.href='activity confirm.html'">SUBMIT</button>
+            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;  
+            <button class="btn btn-primary btn-lg" type="button" onclick="location.href='activity.html'">BACK</button>
         </div>
-        <button type="submit" class="btn btn-default">Submit</button>
     </form>
     <!-- DO NOT MODIFY THOSE FOLLOWING -->
     <div id="include_navBar"></div>
