--- a/meals-edit.html
+++ b/meals-edit.html
@@ -44,7 +44,7 @@
                         <select name="mydropdown">
                             <option value="1">Chicken Shack</option>
                             <option value="2">Koi</option>
-                            <option value="3">Burger King</option>
+                            <option value="3" selected>Burger King</option>
                         </select>
                     </div>
                 </div>
@@ -52,7 +52,7 @@
                     <label>Dishes</label>
                     <p></p>
                     <div id="mydropdown1">
-                        <select name="mydropdown1">
+                        <select name="mydropdown1" class="sr-only">
                             <option value="1">CATFISH BONE IN -- 11.50</option>
                             <option value="3">CATFISH NUGGETS BONELESS -- 8.97</option>
                             <option value="3">PERCH -- 8.97</option>
@@ -68,9 +68,9 @@
                         </select>
                     </div>
 
-                    <div id="mydropdown3" class="sr-only">
+                    <div id="mydropdown3">
                         <select name="mydropdown3">
-                            <option value="1">Sausage & Cheese Muffin Sandwich Meal</option>
+                            <option value="1" selected>Sausage & Cheese Muffin Sandwich Meal</option>
                             <option value="2">Southwestern Breakfast Burrito Meal</option>
                             <option value="3">Sausage Biscuit Sandwich Meal</option>
                         </select>
@@ -78,15 +78,15 @@
                 </div>
                 <div class="form-group">
                     <label>Location</label>
-                    <input type="location" class="form-control" name="Location" placeholder="Enter Location" style="width: 230px;">
+                    <input type="location" class="form-control" name="Location" value="Engelhalt Room 325" style="width: 230px;">
                 </div>
                 <div class="form-group">
                     <label>Time</label>
-                    <input type="time" class="form-control" name="mtime" placeholder="Enter Time" style="width: 230px;">
+                    <input type="time" class="form-control" name="mtime" value="12:30" style="width: 230px;">
                 </div>
                 <div class="form-group">
                     <label>Date</label>
-                    <input type="date" class="form-control" name="mdate" placeholder="Enter Date" style="width: 230px;">
+                    <input type="date" class="form-control" name="mdate" value="2013-03-02" style="width: 230px;">
                 </div>
                 <button type="submit" class="btn btn-default">Re-submit</button>&nbsp;&nbsp;&nbsp;&nbsp;
                 <button class="btn btn-default">Delete Order</button>
