meals todo comment

--- a/meals.html
+++ b/meals.html
@@ -8,6 +8,9 @@
     <title>Schedule Your Life - Meals</title>
 
     <script>
+    // todo 1. submit response in meals - create.html & meals - edit.html
+    // todo 2. delete response in meals - edit.html
+
     WebFontConfig = {
         google: {
             families: ["Karla:400,400italic,700,700italic"]
@@ -153,7 +156,6 @@
         </div>
     </div>
     <!-- This is a templete, do any thing between this line and the next comment line -->
-
 
     <!-- DO NOT MODIFY THOSE FOLLOWING -->
     <div id="include_navBar"></div>
