activity part done
finished but the exchange column left

--- a/activity-succeed.html
+++ b/activity-succeed.html
@@ -32,8 +32,9 @@
 
 <body>
     <!-- This is a templete, do any thing between this line and the next comment line -->
-    <div class="alert alert-info"><h3>Please confirm your information and click the SUBMIT button below.</h3></div>
-    <button class="btn btn-primary btn-lg" type="button" onclick="location.href='activity succeed.html'">SUBMIT</button>
+    <div class="alert alert-success">Successfully submitted!</div>
+    <button class="btn btn-primary btn-lg" type="button" onclick="location.href='activity.html'">BACK TO MAIN MENU</button>
+
 
     <!-- DO NOT MODIFY THOSE FOLLOWING -->
     <div id="include_navBar"></div>
