--- a/activity-launch.html
+++ b/activity-launch.html
@@ -37,7 +37,7 @@
        5 <div class="btn-group btn-group-vertical panel panel-default margin-base-vertical">
             <div class="btn-toolbar">
                 <div class="btn-group btn-group-lg">
-                    <button type="submit" class="btn btn-xlarge btn-primary sign" class="btn btn-xlarge btn-primary sign">Launch New!</button>
+                    <button type="submit" class="btn btn-xlarge btn-primary sign">Launch New!</button>
                 </div>
             </div>
         </div>
@@ -82,7 +82,7 @@
             <input type="file" id="Picture">
         </div>
         <div class="left">
-            <button class="btn btn-primary btn-lg" type="button" onclick="location.href='activity confirm.html'">SUBMIT</button>
+            <button class="btn btn-primary btn-lg" type="button" onclick="location.href='activity-confirm.html'">SUBMIT</button>
             &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;  
             <button class="btn btn-primary btn-lg" type="button" onclick="location.href='activity.html'">BACK</button>
         </div>
