--- a/activity.html
+++ b/activity.html
@@ -59,15 +59,15 @@
         </div>
     </div>
     <div class="panel panel-primary">
-        <div class="panel-heading" onclick="location.href='activity details.html'">NBA GALA!</div>
-        <div class="panel-body"  onclick="location.href='activity details.html'">
+        <div class="panel-heading">NBA GALA!</div>
+        <div class="panel-body">
             <ul>
                 <strong>
                 <li><span class=" glyphicon glyphicon-time"></span>02-02 20:00-22:00</li>
                 <li><span class=" glyphicon glyphicon-map-marker"></span>Engelhalt Room 325</li>
                 <li><span class=" glyphicon glyphicon-tag"></span>TAG: Basketball</li>
                 <li><span class=" glyphicon glyphicon-phone"></span><abbr title="Phone">Tel:</abbr> (123) 456-7890</li>
-                <img src="..." class="img-responsive" alt="Responsive image">
+                <button type="submit" class="btn btn-primary" onclick="location.href='activity-details.html'">See Details</button>
                 </strong>
             </ul>
         </div>
@@ -81,7 +81,7 @@
                 <li><span class=" glyphicon glyphicon-map-marker"></span>Seabury Room 201</li>
                 <li><span class=" glyphicon glyphicon-tag"></span>TAG:Table Game</li>
                 <li><span class=" glyphicon glyphicon-phone"></span><abbr title="Phone">Tel:</abbr> (222) 333-4455</li>
-                <img src="..." class="img-responsive" alt="Responsive image">
+                <button type="submit" class="btn btn-primary">See Details</button>
                 </strong>
             </ul>
         </div>
@@ -95,7 +95,7 @@
                 <li><span class=" glyphicon glyphicon-map-marker"></span>Engelhalt Room 214</li>
                 <li><span class=" glyphicon glyphicon-tag"></span>TAG: PC GAME</li>
                 <li><span class=" glyphicon glyphicon-phone"></span><abbr title="Phone">Tel:</abbr> (999) 888-7766</li>
-                <img src="..." class="img-responsive" alt="Responsive image">
+                <button type="submit" class="btn btn-primary">See Details</button>
                 </strong>
             </ul>
         </div>
