--- a/activity-details.html
+++ b/activity-details.html
@@ -34,6 +34,7 @@
     <!-- This is a templete, do any thing between this line and the next comment line -->
     <h2 class="text-center">ACTIVITY DETAILS<small>(Upcoming)</small></h2>
     <br>
+    <div class="col-md-1">
     <div class="panel panel-primary">
         <div class="panel-heading">NBA GALA!</div>
         <div class="panel-body">
@@ -55,6 +56,7 @@
             <img src="..." class="img-responsive" alt="Responsive image"><br>
         </div>
     </div>
+</div>
     <div class="row">
         <div class="center">
             <button class="btn btn-primary btn-lg" role="button">INTERESTED<span class=" glyphicon glyphicon-heart"></span></button>
