--- a/activity-launch.html
+++ b/activity-launch.html
@@ -34,7 +34,7 @@
 <body>
     <!-- This is a templete, do any thing between this line and the next comment line -->
     <div class="span4 text-center">
-       5 <div class="btn-group btn-group-vertical panel panel-default margin-base-vertical">
+        <div class="btn-group btn-group-vertical panel panel-default margin-base-vertical">
             <div class="btn-toolbar">
                 <div class="btn-group btn-group-lg">
                     <button type="submit" class="btn btn-xlarge btn-primary sign">Launch New!</button>
