--- a/meals-create.html
+++ b/meals-create.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-    <title>Schedule Your Life</title>
+    <title>Schedule Your Life - Meals - New Order</title>
 
     <!-- jQuery (necessary for Bootstrap's JavaSLipt plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
@@ -39,18 +39,31 @@
         <form role="form">
             <div class="form-group">
                 <label>Resaurant</label>
+                <p></p>
                 <select name="mydropdown">
                     <option value="1">Chicken Shack</option>
                     <option value="2">Koi</option>
-                    <option value="3">Subway</option>
+                    <option value="3">Burger King</option>
                 </select>
             </div>
             <div class="form-group">
                 <label>Dishes</label>
-                <select name="mydropdown">
-                    <option value="1">Fresh Milk</option>
-                    <option value="2">Old Cheese</option>
-                    <option value="3">Hot Bread</option>
+                <p></p>
+                <select name="mydropdown1">
+                    <option value="1">CATFISH BONE IN -- 11.50</option>
+                    <option value="3">CATFISH NUGGETS BONELESS -- 8.97</option>
+                    <option value="3">PERCH -- 8.97</option>
+                    <option value="2">TILAPIA FILLETS -- 11.50</option>
+                </select>
+                <select name="mydropdown2">
+                    <option value="1">Kung Bao chicken -- 12.99</option>
+                    <option value="2">Szechwan Red Snapper Whole Fish -- 25.99</option>
+                    <option value="3">Hot Pepper Chicken -- 12.99</option>
+                </select>
+                <select name="mydropdown3">
+                    <option value="1">Sausage & Cheese Muffin Sandwich Meal</option>
+                    <option value="2">Southwestern Breakfast Burrito Meal</option>
+                    <option value="3">Sausage Biscuit Sandwich Meal</option>
                 </select>
             </div>
             <div class="form-group">
@@ -59,7 +72,11 @@
             </div>
             <div class="form-group">
                 <label>Time</label>
-                <input type="tag" class="form-control" id="Tag" placeholder="Enter Tag">
+                <input type="time" class="form-control" id="Tag" placeholder="Enter Time">
+            </div>
+            <div class="form-group">
+                <label>Date</label>
+                <input type="date" class="form-control" id="Tag" placeholder="Enter Date" style="width: 200px;">
             </div>
             <button type="submit" class="btn btn-default">Submit</button>
         </form>
