small change in activity-launch
some small change

--- a/activity-launch.html
+++ b/activity-launch.html
@@ -33,15 +33,7 @@
 
 <body>
     <!-- This is a templete, do any thing between this line and the next comment line -->
-    <div class="span4 text-center">
-        <div class="btn-group btn-group-vertical panel panel-default margin-base-vertical">
-            <div class="btn-toolbar">
-                <div class="btn-group btn-group-lg">
-                    <button type="submit" class="btn btn-xlarge btn-primary sign">Launch New!</button>
-                </div>
-            </div>
-        </div>
-    </div>
+    <h1 class="text-center">LAUNCH ONE</h1>
     <div class="col-md-1">
         <form role="form">
             <p class="help-block">* is required.</p>
