class row for each
just fix it, defects still exist

--- a/activity-confirm.html
+++ b/activity-confirm.html
@@ -32,29 +32,33 @@
 
 <body>
     <!-- This is a templete, do any thing between this line and the next comment line -->
-    <div class="col-md-1">
-        <div class="alert alert-info"><h3>Please confirm your information and click the SUBMIT button below.</h3></div>
-        <div class="panel panel-primary">
-            <div class="col-md-1">
-                <li><strong>TITLE:</strong> XXXXXX</li>
-                <li><strong>TIME:</strong> XXXXXX</li>
-                <li><strong>LOCATION:</strong> XXXXXX</li>
-                <li><strong>TAG:</strong> XXXXX</li>
-                <li><strong>CAPACITY:</strong> XXXXX</li>
-                <li><strong>HOST INFOMATION:</strong> XXXXX</li>
-                <li><strong>DESCRIPTION:</strong> XXXXXXXXXX</li>
-                <li><strong>PICTURE:</strong><img src="..." class="img-responsive" alt="Responsive image"><br>
+    <div class="row">
+        <div class="col-md-1"></div>
+        <div class="col-md-10">
+            <div class="alert alert-info"><h3>Please confirm your information and click the SUBMIT button below.</h3></div>
+            <div class="panel panel-primary">
+                <div class="col-md-1">
+                    <li><strong>TITLE:</strong> XXXXXX</li>
+                    <li><strong>TIME:</strong> XXXXXX</li>
+                    <li><strong>LOCATION:</strong> XXXXXX</li>
+                    <li><strong>TAG:</strong> XXXXX</li>
+                    <li><strong>CAPACITY:</strong> XXXXX</li>
+                    <li><strong>HOST INFOMATION:</strong> XXXXX</li>
+                    <li><strong>DESCRIPTION:</strong> XXXXXXXXXX</li>
+                    <li><strong>PICTURE:</strong><img src="..." class="img-responsive" alt="Responsive image"><br>
+                </div>
+            </div>
+            <div class="row">
+                <div class="center">
+                    <button class="btn btn-primary btn-lg" role="button" onclick="location.href='activity-succeed.html'">Submit</button>
+                    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;  
+                    <button class="btn btn-primary btn-lg" role="button" onclick="location.href='activity.html'">Back To Main Menu</button>
+                    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
+                    <button class="btn btn-primary btn-lg" role="button" onclick="location.href='activity-launch.html'">Back</button>
+                </div>
             </div>
         </div>
-        <div class="row">
-            <div class="center">
-                <button class="btn btn-primary btn-lg" role="button" onclick="location.href='activity-succeed.html'">Submit</button>
-                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;  
-                <button class="btn btn-primary btn-lg" role="button" onclick="location.href='activity.html'">Back To Main Menu</button>
-                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
-                <button class="btn btn-primary btn-lg" role="button" onclick="location.href='activity-launch.html'">Back</button>
-            </div>
-        </div>
+        <div class="col-md-1"></div>
     </div>
     <!-- DO NOT MODIFY THOSE FOLLOWING -->
     <div id="include_navBar"></div>
