--- a/activity-details.html
+++ b/activity-details.html
@@ -34,39 +34,42 @@
     <!-- This is a templete, do any thing between this line and the next comment line -->
     <h2 class="text-center">ACTIVITY DETAILS<small>(Upcoming)</small></h2>
     <br>
-    <div class="col-md-1">
-        <div class="panel panel-primary">
-            <div class="panel-heading">NBA GALA!</div>
-            <div class="panel-body">
-                <strong>TIME<span class=" glyphicon glyphicon-time"></span></strong><br>
-                02-02 20:00-22:00<br>
-                <strong>LOCATION<span class=" glyphicon glyphicon-map-market"></span></strong><br>
-                Engelhalt Room 325<br>
-                <strong>TAG<span class=" glyphicon glyphicon-tag"></span></strong><br>
-                Basketball Game<br>
-                <strong>CAPACITY<span class=" glyphicon glyphicon-upload"></span></strong><br>
-                02-02 20:00-22:00<br>
-                <strong>HOST INFOMATION<span class=" glyphicon glyphicon-user"></span></strong><br>
-                <li>Name: P. Linda</li>
-                <li>Email: Linda@u.northwestern.edu</li>
-                <li>Tel: 847-964-0087</li>
-                <strong>DESCRIPTION<span class=" glyphicon glyphicon-list-alt"></span></strong><br>
-                Are you feel bored of stressful study? Tonight we will watch NBA all-star game! Come and join us!<br>
-                <strong>PICTURE<span class=" glyphicon glyphicon-picture"></span></strong><br>
-                <img src="..." class="img-responsive" alt="Responsive image"><br>
+    <div class="row">
+        <div class="col-md-1"></div>
+        <div class="col-md-10">
+            <div class="panel panel-primary">
+                <div class="panel-heading">NBA GALA!</div>
+                <div class="panel-body">
+                    <strong>TIME<span class=" glyphicon glyphicon-time"></span></strong><br>
+                    02-02 20:00-22:00<br>
+                    <strong>LOCATION<span class=" glyphicon glyphicon-map-market"></span></strong><br>
+                    Engelhalt Room 325<br>
+                    <strong>TAG<span class=" glyphicon glyphicon-tag"></span></strong><br>
+                    Basketball Game<br>
+                    <strong>CAPACITY<span class=" glyphicon glyphicon-upload"></span></strong><br>
+                    02-02 20:00-22:00<br>
+                    <strong>HOST INFOMATION<span class=" glyphicon glyphicon-user"></span></strong><br>
+                    <li>Name: P. Linda</li>
+                    <li>Email: Linda@u.northwestern.edu</li>
+                    <li>Tel: 847-964-0087</li>
+                    <strong>DESCRIPTION<span class=" glyphicon glyphicon-list-alt"></span></strong><br>
+                    Are you feel bored of stressful study? Tonight we will watch NBA all-star game! Come and join us!<br>
+                    <strong>PICTURE<span class=" glyphicon glyphicon-picture"></span></strong><br>
+                    <img src="..." class="img-responsive" alt="Responsive image"><br>
+                </div>
             </div>
         </div>
-    </div>
-    <div class="row">
-        <div class="center">
-            <button class="btn btn-primary btn-lg" role="button">INTERESTED<span class=" glyphicon glyphicon-heart"></span></button>
-            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;  
-            <button class="btn btn-primary btn-lg" role="button">ATTEND<span class=" glyphicon glyphicon-thumbs-up"></span></button>
-            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
-            <button class="btn btn-primary btn-lg" role="button" onclick="location.href='activity.html'">Back</button>
+        <div class="row">
+            <div class="center">
+                <button class="btn btn-primary btn-lg" role="button">INTERESTED<span class=" glyphicon glyphicon-heart"></span></button>
+                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;  
+                <button class="btn btn-primary btn-lg" role="button">ATTEND<span class=" glyphicon glyphicon-thumbs-up"></span></button>
+                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
+                <button class="btn btn-primary btn-lg" role="button" onclick="location.href='activity.html'">Back</button>
+            </div>
         </div>
+        <div class="col-md-1"></div>
     </div>
-
     <!-- DO NOT MODIFY THOSE FOLLOWING -->
     <div id="include_navBar"></div>
 </body>
